# log-application-azure-monitor

./: main.py  pyproject.toml
Utils/: Logs.py
